welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:10: warning: enclosing method arriver has result type Unit: return value discarded
      return true
      ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:13: warning: enclosing method arriver has result type Unit: return value discarded
  return false
  ^SnakeBuggle:18: error: value unary_! is not a member of Unit
  while(!arriver){
        ^