welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  serpent()
}

def arriver(){
	if (estFaceMur() && getDirection() == Direction.EST){
    gauche();
    if (estFaceMur()){
      droite()
      return true
    }
  }
  return false
}


def serpent(){
  while(!arriver){
    baisseBrosse()
    if (getDirection() == Direction.EST && 		             estFaceMur()){
      droite();avance();droite();
    }
    if (getDirection() == Direction.OUEST && 		             estFaceMur()){
      gauche();avance();gauche();
    }
    avance();
  }
  leveBrosse()
}

